# py-llm-cli-sandbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_cli_sandbox/: __init__.py  __main__.py  assets.py  claude.py  cli.py  compose.py  config.py  docker_ctl.py  doctor.py  errors.py  ollama.py  paths.py  probe.py  status.py  sysinfo.py  update.py
src/llm_cli_sandbox/assets/: Dockerfile  entrypoint.sh
tests/: test_basics.py  test_claude.py  test_cli.py  test_compose.py  test_docker_ctl.py  test_endpoints.py  test_ollama.py  test_probe.py  test_status.py  test_update.py  test_validation.py
